--- a/lib/tobaccos_club_web/templates/user_reset_password/edit.html.eex
+++ b/lib/tobaccos_club_web/templates/user_reset_password/edit.html.eex
@@ -7,13 +7,13 @@
         <p><%= dgettext("users", "Oops, something went wrong! Please check the errors below.") %></p>
       </div>
     <% end %>
-    <div class="flex flex-col mb-2 w-1/3">
+    <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
       <%= label f, :password, dgettext("users", "New password") %>
       <%= password_input f, :password, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
       <span class="mt-4"><%= error_tag f, :password %></span>
     </div>
 
-    <div class="flex flex-col mb-2 w-1/3">
+    <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
       <%= label f, :password_confirmation, dgettext("users", "Confirm new password") %>
       <%= password_input f, :password_confirmation, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
       <span class="mt-4"><%= error_tag f, :password_confirmation %></span>
