--- a/lib/tobaccos_club_web/templates/user_settings/edit.html.eex
+++ b/lib/tobaccos_club_web/templates/user_settings/edit.html.eex
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center">
+<div class="flex flex-col items-center p-4">
   <h1 class="m-4 text-2xl font-bold text-yellow-900"><%= dgettext("users", "Settings") %></h1>
 
   <div class="border-b-2 w-full mb-4">
@@ -11,13 +11,13 @@
       <% end %>
 
       <%= hidden_input f, :action, name: "action", value: "update_email" %>
-      <div class="flex flex-col mb-2 w-1/3">
+      <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
         <%= label f, :email, dgettext("users", "Email") %>
         <%= email_input f, :email, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
         <span class="mt-4"><%= error_tag f, :email %></span>
       </div>
 
-      <div class="flex flex-col mb-2 w-1/3">
+      <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
         <%= label f, :current_password, dgettext("users", "Password") %>
         <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email", class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
         <span class="mt-4"><%= error_tag f, :current_password %></span>
@@ -42,19 +42,19 @@
 
       <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
-      <div class="flex flex-col mb-2 w-1/3">
+      <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
         <%= label f, :password, dgettext("users", "New password") %>
         <%= password_input f, :password, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
         <span class="mt-4"><%= error_tag f, :password %></span>
       </div>
 
-      <div class="flex flex-col mb-2 w-1/3">
+      <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
         <%= label f, :password_confirmation, dgettext("users", "Confirm new password") %>
         <%= password_input f, :password_confirmation, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
         <span class="mt-4"><%= error_tag f, :password_confirmation %></span>
       </div>
 
-      <div class="flex flex-col mb-2 w-1/3">
+      <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
         <%= label f, :current_password, dgettext("users", "Password") %>
         <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password", class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
         <span class="mt-4"><%= error_tag f, :current_password %></span>
