--- a/lib/tobaccos_club_web/live/blends_live/show.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/show.html.leex
@@ -9,8 +9,8 @@
 
 
 <%= if @blend do %>
-  <div class="flex justify-between">
-    <div class="flex flex-col">
+  <div class="flex flex-col md:flex-row justify-between">
+    <div class="flex flex-col order-3 md:order-1">
       <h3 class="text-2xl sm:text-4xl text-yellow-800 text-left p-2 mt-2"><%= @blend.name %></h3>
       <div class="text-yellow-800 px-2">
         <%= gettext("By") %>: <span><%= @blend.brand.name %></span>
@@ -40,8 +40,8 @@
         <p><%= Gettext.gettext(TobaccosClubWeb.Gettext, @blend.production) %></p>
       </div>
     </div>
-    <div class="px-3 mt-3 flex flex-col justify-start items-end">
-      <div class="flex w-64 justify-end">
+    <div class="px-3 mt-3 flex flex-col justify-start items-center md:items-end order-1 md:order-3">
+      <div class="flex w-full md:w-64 justify-between md:justify-end">
         <%= live_patch gettext("Back"), to: Routes.blends_index_path(@socket, :index), class: "inline-flex justify-center py-2 px-4 mb-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800 mr-3" %>
         <%= live_patch gettext("Edit"), to: Routes.blends_show_path(@socket, :edit, @blend.brand.slug, @blend.slug), class: "inline-flex justify-center py-2 px-4 mb-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800" %>
       </div>
