--- a/lib/tobaccos_club_web/templates/user_reset_password/new.html.eex
+++ b/lib/tobaccos_club_web/templates/user_reset_password/new.html.eex
@@ -3,7 +3,7 @@
 
 
   <%= form_for :user, Routes.user_reset_password_path(@conn, :create), [class: "flex flex-col items-center w-full"], fn f -> %>
-    <div class="flex flex-col mb-2 w-1/3">
+    <div class="flex flex-col mb-2 w-3/4 md:w-1/3">
       <%= label f, :email, dgettext("users", "Email") %>
       <%= email_input f, :email, required: true, class: "focus:border-yellow-800 focus:outline-none focus:ring-0" %>
     </div>
