feature(blend) Improve blend show page
* Add blend name to page title
* Do not show cut name if there is no cut

--- a/lib/tobaccos_club_web/live/blends_live/show.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/show.html.leex
@@ -23,10 +23,12 @@
         <p class="text-yellow-800"><%= gettext("Blend Type") %></p>
         <p><%= @blend.blend_type.name %></p>
       </div>
+      <%= if @blend.cut do %>
       <div class="px-3 mt-3">
         <p class="text-yellow-800"><%= gettext("Cut") %></p>
         <p><%= @blend.cut.name %></p>
       </div>
+      <% end %>
       <div class="px-3 mt-3">
         <p class="text-yellow-800"><%= gettext("Contents") %></p>
         <p><%= @blend.contents %></p>
