chore: Upgrade to phoenix 1.6
* upgrade packages
* change templates extensions from leex to heex
* Change webpack configuration to esbuild
* Fix tailwind
* Fix alpinejs
* Fix syntaxes for heex
* Change deploy

--- a/lib/tobaccos_club_web/live/blends_live/show.html.heex
+++ b/lib/tobaccos_club_web/live/blends_live/show.html.heex
@@ -49,7 +49,7 @@
       </div>
       <%= if @blend.image_url do %>
         <div>
-          <img src="<%= TobaccosClub.Services.Storage.generate_url(@blend.image_url) %>"
+          <img src={"#{ TobaccosClub.Services.Storage.generate_url(@blend.image_url) }"}
                class="h-64 w-64 border-2 border-gray-100 border-opacity-25 rounded-lg">
         </div>
       <% end %>
