--- a/lib/tobaccos_club_web/live/blends_live/index.html.heex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.heex
@@ -24,8 +24,8 @@
             type="search"
             name="brand"
             aria-label="Brand name"
-            value="<%= @filter.search_text %>"
-            placeholder="<%= gettext "Search by Blend or Brand" %>">
+            value={"#{ @filter.search_text }"}
+            placeholder={"#{ gettext "Search by Blend or Brand" }"}>
           <button type="submit" class="absolute right-0 top-0 mt-5 mr-4 text-gray-300">
             <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
@@ -49,7 +49,7 @@
         <%= for item <- @selected_filters do %>
           <div class="flex items-center rounded-full border-2 px-1 w-auto bg-gray-200 text-gray-500 text-xs font-semibold">
             <span class=""><%= item.name %></span>
-            <div phx-click="uncheck_filter" phx-value-id="<%= item.id %>" phx-value-struct="<%= item.__struct__ %>">
+            <div phx-click="uncheck_filter" phx-value-id={"#{ item.id }"} phx-value-struct={"#{ item.__struct__ }"}>
               <svg class="h-5 w-5 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
               </svg>
@@ -79,7 +79,7 @@
             <%= for blend <- @blends do %>
               <tr class="hover:bg-orange-100">
                 <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-base">
-                  <a href="#" phx-click="show_blend" phx-value-id="<%= blend.id %>" x-on:click="showBlend = true"><%= blend.name %></a>
+                  <a href="#" phx-click="show_blend" phx-value-id={"#{ blend.id }"} x-on:click="showBlend = true"><%= blend.name %></a>
                 </td>
                 <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-base hidden sm:table-cell">
                   <%= blend.brand.name %>
@@ -88,7 +88,7 @@
                   <%= blend.blend_type.name %>
                 </td>
                 <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
-                  <a href="<%= Routes.blends_show_path(@socket, :show, blend.brand.slug, blend.slug, locale: @locale) %>">
+                  <a href={"#{ Routes.blends_show_path(@socket, :show, blend.brand.slug, blend.slug, locale: @locale) }"}>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5 text-orange-700">
                       <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" />
                       <path fillRule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clipRule="evenodd" />
