--- a/lib/tobaccos_club_web/live/brands_live/show.html.heex
+++ b/lib/tobaccos_club_web/live/brands_live/show.html.heex
@@ -13,7 +13,7 @@
         <%= for blend <- @brand.blends do %>
           <tr class="hover:bg-orange-100">
             <td class="py-4 px-6 border-b border-gray-200 text-orange-900 text-lg">
-              <a href="/<%= @brand.slug %>/<%= blend.id %>"><%= blend.name %></a>
+              <a href={"/#{ @brand.slug }/#{ blend.id }"}><%= blend.name %></a>
             </td>
           </tr>
         <% end %>
