--- a/lib/tobaccos_club_web/live/components/contact_component.html.heex
+++ b/lib/tobaccos_club_web/live/components/contact_component.html.heex
@@ -1,10 +1,5 @@
-
   <div>
-    <%= f = form_for :contact, "#",
-      id: "user-form",
-      phx_target: @myself,
-      phx_change: "validate",
-      phx_submit: "send_email" %>
+    <.form let={f} for={:contact} url="#" id="user-form" phx-target={@myself} phx-change="validate" phx-submit="send_email">
 
       <div class="px-4 py-5 bg-white sm:p-6">
         <div class="flex flex-col">
@@ -34,5 +29,5 @@
           </div>
         </div>
       </div>
-    </form>
+    </.form>
   </div>
