--- a/lib/tobaccos_club_web/live/blends_live/index.html.heex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.heex
@@ -27,7 +27,12 @@
             value={"#{ @filter.search_text }"}
             placeholder={"#{ gettext "Search by Blend or Brand" }"}>
           <button type="submit" class="absolute right-0 top-0 mt-5 mr-4 text-gray-300">
-            <%= svg_image_tag("search-icon") %>
+            <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
+                viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
+                width="512px" height="512px">
+                <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+            </svg>
           </button>
         </div>
       </form>
@@ -45,7 +50,9 @@
           <div class="flex items-center rounded-full border-2 px-1 w-auto bg-gray-200 text-gray-500 text-xs font-semibold">
             <span class=""><%= item.name %></span>
             <div phx-click="uncheck_filter" phx-value-id={"#{ item.id }"} phx-value-struct={"#{ item.__struct__ }"}>
-              <%= svg_image_tag("close-icon") %>
+              <svg class="h-5 w-5 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+              </svg>
             </div>
           </div>
         <% end %>
@@ -82,7 +89,10 @@
                 </td>
                 <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
                   <a href={"#{ Routes.blends_show_path(@socket, :show, blend.brand.slug, blend.slug, locale: @locale) }"}>
-                    <%= svg_image_tag("show-icon") %>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5 text-orange-700">
+                      <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" />
+                      <path fillRule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clipRule="evenodd" />
+                    </svg>
                   </a>
                 </td>
               </tr>
